--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fontsource/montserrat": "^4.5.14",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.6",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@reduxjs/toolkit": "^1.9.1",
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
@@ -22,6 +23,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
