--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "axios": "^1.2.3",
     "dayjs": "^1.11.7",
     "formik": "^2.2.9",
+    "install": "^0.13.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
+    "npm": "^9.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-icons": "^4.7.1",
