--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "install": "^0.13.0",
     "lodash": "^4.17.21",
     "nanoid": "^4.0.0",
+    "notiflix": "^3.2.6",
     "npm": "^9.4.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
