--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "redux-persist": "^6.0.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.6",
+    "swiper": "^9.1.0",
     "web-vitals": "^2.1.3",
     "yup": "^1.0.0"
   },
